<resources>
    <string name="app_name">Tic-Tac-Toe</string>
    <string name="mainMenu">Main Menu</string>
    <string name="board_image_description">tic-tac-toe_board</string>
    <string name="newGame">New Game</string>
    <string name="start_page">start_page</string>
    <string name="one_player">1 Player</string>
    <string name="two_player">2 Player</string>
    <string name="start">Start</string>
    <string name="playAgain">Play Again!</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="edit_names_and_hit_start">Edit Names and Hit Start!</string>
    <string name="title">Tic-Tac-Toe</string>
</resources>
