<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Start"
    android:background="@color/black"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/start_page"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/start_page" />

    <Button
        android:id="@+id/onePlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one_player"
        android:onClick="onePlayer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/twoPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/two_player"
        android:onClick="twoPlayer"
        app:layout_constraintLeft_toLeftOf="@+id/onePlayer"
        app:layout_constraintTop_toBottomOf="@+id/onePlayer" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="startButton"
        android:text="@string/start"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="@+id/twoPlayer"
        app:layout_constraintTop_toBottomOf="@+id/player2name" />

    <TextView
        android:id="@+id/enterNames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:padding="5dp"
        android:text="@string/edit_names_and_hit_start"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/twoPlayer" />

    <EditText
        android:id="@+id/player1name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="5"
        android:inputType="textPersonName"
        android:text="@string/player_1"
        android:textColor="@color/white"
        android:textColorLink="@color/colorPrimaryDark"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="@+id/twoPlayer"
        app:layout_constraintTop_toBottomOf="@+id/enterNames" />

    <EditText
        android:id="@+id/player2name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="5"
        android:inputType="textPersonName"
        android:text="@string/player_2"
        android:textColor="@color/white"
        android:textColorLink="@color/colorPrimaryDark"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="@+id/twoPlayer"
        app:layout_constraintTop_toBottomOf="@+id/player1name" />

</android.support.constraint.ConstraintLayout>